# metador-core

./: .flake8  .gitignore  .pre-commit-config.yaml  AUTHORS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  PATCH_THEORY.md  README.md  codemeta.json  mkdocs.yml  pyproject.toml  scratch.py  somesy.toml  test  test.h5
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  mirror.yml  pypi.yml  test_pypi.yml  triage_labler.yml
.reuse/: dep5
ardiem_container/: __init__.py  assembly.py  dataset.py  hashutils.py  metadata.py  overlay.py  record.py  types.py  util.py
ardiem_container/ih5/: PATCH_THEORY.md  __init__.py  dataset.py  overlay.py  record.py
ardiem_container/metadata/: base.py  body.py  header.py  previewable.py  types.py
ardiem_container/packer/: __init__.py  base.py  dummy.py  example.py  helpers.py  plugins.py  util.py
docs/: dev_guide.md
docs/notebooks/: 01_MetadorContainer.ipynb  02_YourFirstMetadorPlugin.ipynb  03_Schemas.ipynb  04_Harvesters.ipynb  05_Widgets.ipynb  about.md  schema_flowchart.dot
docs/scripts/: coverage_status.py
latest/changelog/: index.html
latest/code_of_conduct/: index.html
latest/contributing/: index.html
latest/coverage/: covindex.html  d_01dadae4b3fcdebb___init___py.html  d_01dadae4b3fcdebb_container_py.html  d_01dadae4b3fcdebb_manifest_py.html  d_01dadae4b3fcdebb_overlay_py.html  d_01dadae4b3fcdebb_record_py.html  d_01dadae4b3fcdebb_skeleton_py.html  d_0c129d6586032b96___init___py.html  d_0c129d6586032b96_entrypoints_py.html  d_0c129d6586032b96_interface_py.html  d_0c129d6586032b96_metaclass_py.html  d_0c129d6586032b96_types_py.html  d_0c129d6586032b96_util_py.html  d_0c45cf34c8de3889___init___py.html  d_0dde7026e343164a___init___py.html  d_0dde7026e343164a_lib_py.html  d_0dde7026e343164a_skos_py.html  d_2ac7640f641e5ba3___init___py.html  d_2ac7640f641e5ba3_plugins_py.html  d_32a95754ffa4788e___init___py.html  d_32a95754ffa4788e_example_py.html  d_32a95754ffa4788e_types_py.html  d_32a95754ffa4788e_utils_py.html  d_38c7e097b6ce92c7___init___py.html  d_38c7e097b6ce92c7_common_py.html  d_3bedebed4712beff___init___py.html  d_3bedebed4712beff_drivers_py.html  d_3bedebed4712beff_interface_py.html  d_3bedebed4712beff_protocols_py.html  d_3bedebed4712beff_provider_py.html  d_3bedebed4712beff_utils_py.html  d_3bedebed4712beff_wrappers_py.html  d_3f21ab1b59b30f9e___init___py.html  d_3f21ab1b59b30f9e_standalone_py.html  d_5e028d369947d0f0___init___py.html  d_5e028d369947d0f0_rocrate_py.html  d_5e028d369947d0f0_schemaorg_py.html  d_61d831f87a9ee46e___init___py.html  d_61d831f87a9ee46e_common_py.html  d_61d831f87a9ee46e_dashboard_py.html  (+25 more)
latest/credits/: index.html
latest/dev_guide/: index.html
latest/license/: index.html
main/: 404.html  index.html  objects.inv  sitemap.xml
main/changelog/: index.html
main/code_of_conduct/: index.html
main/contributing/: index.html
main/coverage/: covindex.html  d_01dadae4b3fcdebb___init___py.html  d_01dadae4b3fcdebb_container_py.html  d_01dadae4b3fcdebb_manifest_py.html  d_01dadae4b3fcdebb_overlay_py.html  d_01dadae4b3fcdebb_record_py.html  d_01dadae4b3fcdebb_skeleton_py.html  d_0c129d6586032b96___init___py.html  d_0c129d6586032b96_entrypoints_py.html  d_0c129d6586032b96_interface_py.html  d_0c129d6586032b96_metaclass_py.html  d_0c129d6586032b96_types_py.html  d_0c129d6586032b96_util_py.html  d_0c45cf34c8de3889___init___py.html  d_0dde7026e343164a___init___py.html  d_0dde7026e343164a_lib_py.html  d_0dde7026e343164a_skos_py.html  d_2ac7640f641e5ba3___init___py.html  d_2ac7640f641e5ba3_plugins_py.html  d_32a95754ffa4788e___init___py.html  d_32a95754ffa4788e_example_py.html  d_32a95754ffa4788e_types_py.html  d_32a95754ffa4788e_utils_py.html  d_38c7e097b6ce92c7___init___py.html  d_38c7e097b6ce92c7_common_py.html  d_3bedebed4712beff___init___py.html  d_3bedebed4712beff_drivers_py.html  d_3bedebed4712beff_interface_py.html  d_3bedebed4712beff_protocols_py.html  d_3bedebed4712beff_provider_py.html  d_3bedebed4712beff_utils_py.html  d_3bedebed4712beff_wrappers_py.html  d_3f21ab1b59b30f9e___init___py.html  d_3f21ab1b59b30f9e_standalone_py.html  d_5e028d369947d0f0___init___py.html  d_5e028d369947d0f0_rocrate_py.html  d_5e028d369947d0f0_schemaorg_py.html  d_61d831f87a9ee46e___init___py.html  d_61d831f87a9ee46e_common_py.html  d_61d831f87a9ee46e_dashboard_py.html  (+27 more)
main/credits/: index.html
main/dev_guide/: index.html
main/license/: index.html
main/notebooks/: my-dashboardable-container.h5  my_first_container.h5
main/quickstart/: index.html
main/search/: search_index.json
metador_core/: __init__.py  container.py  hashutils.py  plugins.py
metador_core/container/: __init__.py  drivers.py  interface.py  protocols.py  provider.py  types.py  utils.py  wrappers.py
metador_core/harvester/: __init__.py  common.py  partial.py
metador_core/ih5/: PATCH_THEORY.md  __init__.py  container.py  containers.py  manifest.py  overlay.py  protocols.py  record.py  skeleton.py
metador_core/packer/: __init__.py  diff.py  example.py  interface.py  pluggable.py  plugingroup.py  util.py  utils.py
metador_core/pluggable/: bootstrap.py  interface.py  utils.py
metador_core/plugin/: __init__.py  entrypoints.py  interface.py  metaclass.py  types.py  util.py  utils.py
metador_core/plugins/: __init__.py  bootstrap.py  entrypoints.py  installed.py  interface.py  util.py  utils.py
metador_core/rdf/: __init__.py  skos.py
tests/: __init__.py  conftest.py  test_ardiem_container.py  test_ardiem_record.py  test_dataset.py  test_dirdiff.py  test_example_packer.py  test_hashutils.py  test_ih5_overlay.py  test_ih5_protocol_types.py  test_ih5_record.py  test_ih5_skeleton_stub.py  test_ih5mf_record.py  test_metadata.py  test_metador_container.py  test_overlay.py  test_packer_interface.py  test_types.py
tutorial/: 01_MetadorContainer.ipynb  02_YourFirstMetadorPlugin.ipynb  03_Schemas.ipynb  03b_Semantics.ipynb  03b_SemanticsInteroperability.ipynb  05_Widgets.ipynb
v0.1.0/: 404.html  index.html  sitemap.xml
v0.1.1/: 404.html  index.html  objects.inv  sitemap.xml
(+574 files in other folders)
